	  was being reset after serial driver was closed.  As a result, you could
	  no reopen the serial driver.
	* configs/lpcxpresso-lpc1768: Add a board configuration for the Embedded
	  Artists LPCXpresso LPC1768 board.

6.2 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/lpc17xx/lpc17_gpioint.c: Correct errors in logic that maps
	  and IRQ number into a register bit number.
	* Makefile: Fix an error introduced in the top-level Makefile in NuttX-6.1.
	  This error only shows up if you have a /tftpboot directory.  Then the 
	  make will fail with an obscure error about not being able to stat pass2.
	* configs/lpcxpresso-lpc1768/nsh: Add an NSH configuration for the
	  LPCXpresso board.
	* configs/*/ld.script: Removed 'sh_link not set for section .ARM.edix' for
	  a few of the builds.  In you have this warning, it can be removed with the
	  following change to the ld.script file:
	  
		+ __exidx_start = ABSOLUTE(.);
		.ARM.exidx : {
		-     __exidx_start = ABSOLUTE(.);
		      *(.ARM.exidx*)
		-     __exidx_end = ABSOLUTE(.);
		} >sram
		+  __exidx_end = ABSOLUTE(.);

	* arch/arm/src/lpc17xx: Correct some typos/bugs in configuration of LPC17xx
	  UART2 and UART3.
	* nuttx/clock.h: Replace all references to the global variable g_system_timer
	  with clock_systemtimer() (currently just a macro that that returns g_system_timer).
	* lib/string/strrch.c: Would fail if the searched-for character were the first
	  character in the string.
	* tools/version.sh and mkversion.c: Tools to manage a NuttX version number
	  file
	* sched/clock_uptime() and lib/time/lib_time.c: Add support for 1 second uptime
	  interface.
	* net/net_dup2.c and include/nuttx/net.h: The conditional compilation for
	  '#if CONFIG_NFILE_DESCRIPTOR > 0' was wrong in both of these files.  It should
	  be '#if CONFIG_NFILE_DESCRIPTORS > 0'.  This causes a dup2() failure in THTTPD
	  and a failure to get a CGI page.  The consequence can be a very serious bug!