@@ -1,5 +1,5 @@
 ############################################################################
-# configs/olimex-lpc1766stk/thttpd/appconfig
+# configs/lpcxpresso-lpc1768/thttpd/appconfig
 #
 #   Copyright (C) 2011 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
